[gd_scene load_steps=34 format=2]

[ext_resource path="res://level_1.gd" type="Script" id=1]
[ext_resource path="res://tileset.tres" type="TileSet" id=2]
[ext_resource path="res://addons/camera_limiter/camera_limiting_area.gd" type="Script" id=3]
[ext_resource path="res://addons/camera_limiter/area_2d.svg" type="Texture" id=4]
[ext_resource path="res://gate.tscn" type="PackedScene" id=5]
[ext_resource path="res://observable.gd" type="Script" id=6]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_00.png" type="Texture" id=7]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_01.png" type="Texture" id=8]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_02.png" type="Texture" id=9]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_03.png" type="Texture" id=10]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_04.png" type="Texture" id=11]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_05.png" type="Texture" id=12]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_06.png" type="Texture" id=13]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_07.png" type="Texture" id=14]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_08.png" type="Texture" id=15]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_09.png" type="Texture" id=16]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_10.png" type="Texture" id=17]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_11.png" type="Texture" id=18]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_12.png" type="Texture" id=19]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_13.png" type="Texture" id=20]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_14.png" type="Texture" id=21]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_15.png" type="Texture" id=22]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_16.png" type="Texture" id=23]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_17.png" type="Texture" id=24]
[ext_resource path="res://external/aseprite/arrow_frames/arrow_18.png" type="Texture" id=25]
[ext_resource path="res://sense_sight.tscn" type="PackedScene" id=26]
[ext_resource path="res://ding.tscn" type="PackedScene" id=27]
[ext_resource path="res://flagpole.tscn" type="PackedScene" id=28]
[ext_resource path="res://music_manager.tscn" type="PackedScene" id=29]
[ext_resource path="res://game_victory_screen.tscn" type="PackedScene" id=30]
[ext_resource path="res://player.tscn" type="PackedScene" id=31]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1000, 1000 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ), ExtResource( 25 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="tile_map" type="TileMap" parent="."]
scale = Vector2( 4, 4 )
z_index = 10
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262152, 0, 8, -262151, 0, 10, -262150, 0, 10, -262149, 0, 10, -262148, 0, 10, -262147, 0, 10, -262146, 0, 10, -262145, 0, 10, -327680, 0, 10, -327679, 0, 10, -327678, 0, 10, -327677, 0, 10, -327676, 0, 10, -327675, 0, 10, -327674, 0, 10, -327673, 0, 10, -327672, 0, 10, -327671, 0, 10, -327670, 0, 10, -327669, 0, 10, -327668, 0, 10, -327667, 0, 10, -327666, 0, 11, -196616, 0, 65544, -196615, 0, 131081, -196614, 0, 131081, -196613, 0, 131081, -196612, 0, 131081, -196611, 0, 131081, -196610, 0, 131081, -196609, 0, 131081, -262144, 0, 131081, -262143, 0, 131081, -262142, 0, 131081, -262141, 0, 131081, -262140, 0, 131081, -262139, 0, 131081, -262138, 0, 131081, -262137, 0, 131081, -262136, 0, 131081, -262135, 0, 131081, -262134, 0, 131081, -262133, 0, 131081, -262132, 0, 131081, -262131, 0, 131081, -262130, 0, 131083, -131080, 0, 65544, -131079, 0, 131081, -131078, 0, 131081, -131077, 0, 131081, -131076, 0, 131081, -131075, 0, 131081, -131074, 0, 131081, -131073, 0, 131081, -196608, 0, 131081, -196607, 0, 131081, -196606, 0, 131081, -196605, 0, 131081, -196604, 0, 131081, -196603, 0, 131081, -196602, 0, 131081, -196601, 0, 131081, -196600, 0, 131081, -196599, 0, 131081, -196598, 0, 131081, -196597, 0, 131081, -196596, 0, 131081, -196595, 0, 131081, -196594, 0, 131083, -65544, 0, 65544, -65543, 0, 131081, -65542, 0, 131081, -65541, 0, 131081, -65540, 0, 131081, -65539, 0, 131081, -65538, 0, 131081, -65537, 0, 131081, -131072, 0, 131078, -131071, 0, 196617, -131070, 0, 196617, -131069, 0, 131077, -131068, 0, 131081, -131067, 0, 131081, -131066, 0, 131081, -131065, 0, 131081, -131064, 0, 131081, -131063, 0, 131081, -131062, 0, 131081, -131061, 0, 131081, -131060, 0, 131081, -131059, 0, 131081, -131058, 0, 131083, -8, 0, 65544, -7, 0, 131081, -6, 0, 131081, -5, 0, 131081, -4, 0, 131081, -3, 0, 131081, -2, 0, 131081, -1, 0, 131081, -65536, 0, 131083, -65533, 0, 65544, -65532, 0, 131081, -65531, 0, 131081, -65530, 0, 131081, -65529, 0, 131081, -65528, 0, 131081, -65527, 0, 131081, -65526, 0, 131081, -65525, 0, 131081, -65524, 0, 131081, -65523, 0, 131081, -65522, 0, 131083, 65528, 0, 65544, 65529, 0, 131081, 65530, 0, 131081, 65531, 0, 131081, 65532, 0, 131081, 65533, 0, 131081, 65534, 0, 131081, 65535, 0, 131081, 0, 0, 131083, 3, 0, 65544, 4, 0, 131081, 5, 0, 131081, 6, 0, 131081, 7, 0, 131081, 8, 0, 131081, 9, 0, 131081, 10, 0, 131081, 11, 0, 131081, 12, 0, 131081, 13, 0, 131081, 14, 0, 131083, 131064, 0, 65544, 131065, 0, 131081, 131066, 0, 131081, 131067, 0, 131081, 131068, 0, 131081, 131069, 0, 131081, 131070, 0, 131081, 131071, 0, 131081, 65536, 0, 131083, 65539, 0, 65544, 65540, 0, 131081, 65541, 0, 131081, 65542, 0, 131081, 65543, 0, 131081, 65544, 0, 131081, 65545, 0, 131081, 65546, 0, 131081, 65547, 0, 131081, 65548, 0, 131081, 65549, 0, 131081, 65550, 0, 131083, 196600, 0, 65544, 196601, 0, 131081, 196602, 0, 131081, 196603, 0, 131081, 196604, 0, 131081, 196605, 0, 131081, 196606, 0, 131081, 196607, 0, 131081, 131072, 0, 131083, 131075, 0, 65544, 131076, 0, 131081, 131077, 0, 131081, 131078, 0, 131081, 131079, 0, 131081, 131080, 0, 131081, 131081, 0, 131081, 131082, 0, 131081, 131083, 0, 131081, 131084, 0, 131081, 131085, 0, 131081, 131086, 0, 131083, 262136, 0, 65544, 262137, 0, 131081, 262138, 0, 131081, 262139, 0, 131081, 262140, 0, 131081, 262141, 0, 131081, 262142, 0, 131081, 262143, 0, 131081, 196608, 0, 131083, 196611, 0, 65544, 196612, 0, 131081, 196613, 0, 131081, 196614, 0, 131081, 196615, 0, 131081, 196616, 0, 131081, 196617, 0, 131081, 196618, 0, 131081, 196619, 0, 131081, 196620, 0, 131081, 196621, 0, 131081, 196622, 0, 131083, 327672, 0, 65544, 327673, 0, 131081, 327674, 0, 131081, 327675, 0, 131081, 327676, 0, 131081, 327677, 0, 131081, 327678, 0, 131081, 327679, 0, 131081, 262144, 0, 131083, 262147, 0, 65544, 262148, 0, 131081, 262149, 0, 131081, 262150, 0, 131081, 262151, 0, 131081, 262152, 0, 131081, 262153, 0, 131081, 262154, 0, 131081, 262155, 0, 131081, 262156, 0, 131081, 262157, 0, 131081, 262158, 0, 131083, 393208, 0, 65544, 393209, 0, 131081, 393210, 0, 131081, 393211, 0, 131081, 393212, 0, 131081, 393213, 0, 131081, 393214, 0, 131081, 393215, 0, 131081, 327680, 0, 131083, 327683, 0, 65544, 327684, 0, 131081, 327685, 0, 131081, 327686, 0, 131081, 327687, 0, 131081, 327688, 0, 131081, 327689, 0, 131081, 327690, 0, 131081, 327691, 0, 131081, 327692, 0, 131081, 327693, 0, 131081, 327694, 0, 131083, 458744, 0, 65544, 458745, 0, 131081, 458746, 0, 131081, 458747, 0, 131081, 458748, 0, 131081, 458749, 0, 131081, 458750, 0, 131081, 458751, 0, 131081, 393216, 0, 131083, 393219, 0, 65544, 393220, 0, 131081, 393221, 0, 131081, 393222, 0, 131081, 393223, 0, 131081, 393224, 0, 131081, 393225, 0, 131081, 393226, 0, 131081, 393227, 0, 131081, 393228, 0, 131081, 393229, 0, 131081, 393230, 0, 131083, 524280, 0, 65544, 524281, 0, 131081, 524282, 0, 131081, 524283, 0, 131081, 524284, 0, 131081, 524285, 0, 131081, 524286, 0, 131081, 524287, 0, 131081, 458752, 0, 131083, 458755, 0, 196616, 458756, 0, 196617, 458757, 0, 131077, 458758, 0, 131081, 458759, 0, 131081, 458760, 0, 131081, 458761, 0, 131081, 458762, 0, 131081, 458763, 0, 131081, 458764, 0, 131081, 458765, 0, 131081, 458766, 0, 131083, 589816, 0, 65544, 589817, 0, 131081, 589818, 0, 131081, 589819, 0, 131081, 589820, 0, 131081, 589821, 0, 131081, 589822, 0, 131081, 589823, 0, 131081, 524288, 0, 131083, 524293, 0, 65544, 524294, 0, 131081, 524295, 0, 131081, 524296, 0, 131081, 524297, 0, 131081, 524298, 0, 131081, 524299, 0, 131081, 524300, 0, 131081, 524301, 0, 131081, 524302, 0, 131083, 655352, 0, 65544, 655353, 0, 131081, 655354, 0, 131081, 655355, 0, 131081, 655356, 0, 131081, 655357, 0, 131081, 655358, 0, 131081, 655359, 0, 131081, 589824, 0, 131083, 589829, 0, 65544, 589830, 0, 131081, 589831, 0, 131081, 589832, 0, 131081, 589833, 0, 131081, 589834, 0, 131081, 589835, 0, 131081, 589836, 0, 131081, 589837, 0, 131081, 589838, 0, 131083, 720888, 0, 65544, 720889, 0, 131081, 720890, 0, 131081, 720891, 0, 131081, 720892, 0, 131081, 720893, 0, 131081, 720894, 0, 131081, 720895, 0, 131081, 655360, 0, 65542, 655361, 0, 10, 655362, 0, 10, 655363, 0, 10, 655364, 0, 10, 655365, 0, 65541, 655366, 0, 131081, 655367, 0, 131081, 655368, 0, 131081, 655369, 0, 131081, 655370, 0, 131081, 655371, 0, 131081, 655372, 0, 131081, 655373, 0, 131081, 655374, 0, 131083, 786424, 0, 65544, 786425, 0, 131081, 786426, 0, 131081, 786427, 0, 131081, 786428, 0, 131081, 786429, 0, 131081, 786430, 0, 131081, 786431, 0, 131081, 720896, 0, 131081, 720897, 0, 131081, 720898, 0, 131081, 720899, 0, 131081, 720900, 0, 131081, 720901, 0, 131081, 720902, 0, 131081, 720903, 0, 131081, 720904, 0, 131081, 720905, 0, 131081, 720906, 0, 131081, 720907, 0, 131081, 720908, 0, 131081, 720909, 0, 131081, 720910, 0, 131083, 851960, 0, 65544, 851961, 0, 131081, 851962, 0, 131081, 851963, 0, 131081, 851964, 0, 131081, 851965, 0, 131081, 851966, 0, 131081, 851967, 0, 131081, 786432, 0, 131081, 786433, 0, 131081, 786434, 0, 131081, 786435, 0, 131081, 786436, 0, 131081, 786437, 0, 131081, 786438, 0, 131081, 786439, 0, 131081, 786440, 0, 131081, 786441, 0, 131081, 786442, 0, 131081, 786443, 0, 131081, 786444, 0, 131081, 786445, 0, 131081, 786446, 0, 131083, 917496, 0, 65544, 917497, 0, 131081, 917498, 0, 131081, 917499, 0, 131081, 917500, 0, 131081, 917501, 0, 131081, 917502, 0, 131081, 917503, 0, 131081, 851968, 0, 131081, 851969, 0, 131081, 851970, 0, 131081, 851971, 0, 131081, 851972, 0, 131081, 851973, 0, 131081, 851974, 0, 131081, 851975, 0, 131081, 851976, 0, 131081, 851977, 0, 131081, 851978, 0, 131081, 851979, 0, 131081, 851980, 0, 131081, 851981, 0, 131081, 851982, 0, 131083, 983032, 0, 65544, 983033, 0, 131081, 983034, 0, 131081, 983035, 0, 131081, 983036, 0, 131081, 983037, 0, 131081, 983038, 0, 131081, 983039, 0, 131081, 917504, 0, 131081, 917505, 0, 131081, 917506, 0, 131081, 917507, 0, 131081, 917508, 0, 131081, 917509, 0, 131081, 917510, 0, 131081, 917511, 0, 131081, 917512, 0, 131081, 917513, 0, 131081, 917514, 0, 131081, 917515, 0, 131081, 917516, 0, 131081, 917517, 0, 131081, 917518, 0, 131083, 1048568, 0, 196616, 1048569, 0, 196617, 1048570, 0, 196617, 1048571, 0, 196617, 1048572, 0, 196617, 1048573, 0, 196617, 1048574, 0, 196617, 1048575, 0, 196617, 983040, 0, 196617, 983041, 0, 196617, 983042, 0, 196617, 983043, 0, 196617, 983044, 0, 196617, 983045, 0, 196617, 983046, 0, 196617, 983047, 0, 196617, 983048, 0, 196617, 983049, 0, 196617, 983050, 0, 196617, 983051, 0, 196617, 983052, 0, 196617, 983053, 0, 196617, 983054, 0, 196619 )

[node name="CameraLimitArea" type="Area2D" parent="."]
position = Vector2( 132, 320 )
script = ExtResource( 3 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}

[node name="collision_shape_2d" type="CollisionShape2D" parent="CameraLimitArea"]
shape = SubResource( 1 )

[node name="limit_bottom" type="Position2D" parent="CameraLimitArea"]
position = Vector2( 0, 456 )

[node name="limit_top" type="Position2D" parent="CameraLimitArea"]
position = Vector2( 0, -444 )

[node name="gate" parent="." instance=ExtResource( 5 )]
position = Vector2( 128, 112 )

[node name="arrow" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 252, 108 )
z_index = 20
script = ExtResource( 6 )

[node name="animated_sprite" type="AnimatedSprite" parent="arrow"]
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
frame = 2
playing = true

[node name="arrow_2" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 244, 696 )
z_index = 20
script = ExtResource( 6 )

[node name="animated_sprite" type="AnimatedSprite" parent="arrow_2"]
rotation = -1.5708
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="sight_sense" parent="." instance=ExtResource( 26 )]

[node name="ding" parent="." instance=ExtResource( 27 )]
position = Vector2( 252, 108 )

[node name="flagpole" parent="." instance=ExtResource( 28 )]
position = Vector2( 248, 640 )

[node name="music_manager" parent="." instance=ExtResource( 29 )]

[node name="game_victory_screen" parent="." instance=ExtResource( 30 )]

[node name="player" parent="." instance=ExtResource( 31 )]
position = Vector2( 128, 44 )

[connection signal="looked_at" from="arrow" to="." method="_on_arrow_looked_at"]
[connection signal="looked_at" from="arrow_2" to="." method="_on_flag_arrow_looked_at"]
[connection signal="sight_acquired" from="sight_sense" to="." method="_on_sight_sense_sight_acquired"]
